--- a/index.html
+++ b/index.html
@@ -10340,10 +10340,10 @@ td.bf:not(:empty)::after{content:" \1F5A4";font-weight:900}
 <td></td>
 <td class="price">675</td>
 <td></td>
-<td class="imgcell"></td>
-<td></td>
+<td class="imgcell"><img alt="" loading="lazy" src="https://shop.geizer.com/upload/iblock/eef/ujkz9a61vkopdqpulgfu84cbb7naf1fl/50794-Korpus-10SL-belyy-07.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;" /></td>
+							<td><a class="urla" href="https://shop.geizer.com/catalog/korpusa_1/korpus_magistralnyy_s26_10sl_1_2_belyy" rel="noopener" target="_blank">перейти</a></td>
 </tr>
-<tr class="distributor-row">
+<tr class="new-item">
 <td>50795</td>
 <td>Корпус магистральный фильтра Гейзер С27 10SL 1/2” ВР, прозр.</td>
 <td></td>
@@ -10351,10 +10351,10 @@ td.bf:not(:empty)::after{content:" \1F5A4";font-weight:900}
 <td></td>
 <td class="price">770</td>
 <td></td>
-<td class="imgcell"></td>
-<td></td>
+<td class="imgcell"><img alt="" loading="lazy" src="https://shop.geizer.com/upload/iblock/1c6/0ep2v4w4cf2l6bbns3zdhzfh6wxcmt1s/50795-Korpus-10SL-prozrachnyy-07.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;" /></td>
+							<td><a class="urla" href="https://shop.geizer.com/catalog/korpusa_1/korpus_magistralnyy_s27_10sl_1_2_prozrachnyy/" rel="noopener" target="_blank">перейти</a></td>
 </tr>
-<tr class="distributor-row">
+<tr class="new-item">
 <td>50796</td>
 <td>Корпус магистральный фильтра Гейзер С26 двойной 10SL 1/2” ВР</td>
 <td></td>
@@ -10362,10 +10362,10 @@ td.bf:not(:empty)::after{content:" \1F5A4";font-weight:900}
 <td></td>
 <td class="price">1390</td>
 <td></td>
-<td class="imgcell"></td>
-<td></td>
+<td class="imgcell"><img alt="" loading="lazy" src="https://shop.geizer.com/upload/iblock/de1/dt1qne2haw5buqmir5sth0newcm26xem/50796-Korpus_dvoyka-10SL-01.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;" /></td>
+							<td><a class="urla" href="https://shop.geizer.com/catalog/korpusa_1/korpus_magistralnyy_s26_dvoynoy_10sl_1_2/" rel="noopener" target="_blank">перейти</a></td>
 </tr>
-<tr class="distributor-row">
+<tr class="new-item">
 <td>50797</td>
 <td>Корпус магистральный фильтра Гейзер С26 тройной 10SL 1/2” ВР</td>
 <td></td>
@@ -10373,10 +10373,10 @@ td.bf:not(:empty)::after{content:" \1F5A4";font-weight:900}
 <td></td>
 <td class="price">1990</td>
 <td></td>
-<td class="imgcell"></td>
-<td></td>
+<td class="imgcell"><img alt="" loading="lazy" src="https://shop.geizer.com/upload/resize_cache/iblock/a48/iu4om4gnh8een2dc2ti1p0lihs1ys30y/650_650_140cd750bba9870f18aada2478b24840a/50797-Korpus_troyka-10SL-01.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;" /></td>
+							<td><a class="urla" href="https://shop.geizer.com/catalog/korpusa_1/korpus_magistralnyy_s26_troynoy_10sl_1_2/" rel="noopener" target="_blank">перейти</a></td>
 </tr>
-<tr class="distributor-row">
+<tr class="new-item">
 <td>50788</td>
 <td>Корпус магистральный фильтра Гейзер С25 двойной 20SL 3/4” ВР, лат.</td>
 <td></td>
@@ -10384,10 +10384,10 @@ td.bf:not(:empty)::after{content:" \1F5A4";font-weight:900}
 <td></td>
 <td class="price">3440</td>
 <td></td>
-<td class="imgcell"></td>
-<td></td>
+<td class="imgcell"><img alt="" loading="lazy" src="https://shop.geizer.com/upload/resize_cache/iblock/7b2/wug3gwr9g6x97xy5i1lfgxb08lhmb5i4/650_650_140cd750bba9870f18aada2478b24840a/50788-Korpus_dvoyka-20SL-02.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;" /></td>
+							<td><a class="urla" href="https://shop.geizer.com/catalog/korpusa_1/korpus_magistralnyy_s25_dvoynoy_20sl_3_4/" rel="noopener" target="_blank">перейти</a></td>
 </tr>
-<tr class="distributor-row">
+<tr class="new-item">
 <td>50789</td>
 <td>Корпус магистральный фильтра Гейзер С25 тройной 20SL 3/4” ВР, лат.</td>
 <td></td>
@@ -10395,8 +10395,8 @@ td.bf:not(:empty)::after{content:" \1F5A4";font-weight:900}
 <td></td>
 <td class="price">4890</td>
 <td></td>
-<td class="imgcell"></td>
-<td></td>
+<td class="imgcell"><img alt="" loading="lazy" src="https://shop.geizer.com/upload/resize_cache/iblock/8af/uo3q3xagtoxy7bmoqh1t058slrfchszf/650_650_140cd750bba9870f18aada2478b24840a/50789-Korpus_troyka-20SL-02.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;" /></td>
+							<td><a class="urla" href="https://shop.geizer.com/catalog/korpusa_1/korpus_magistralnyy_s25_troynoy_20sl_3_4/" rel="noopener" target="_blank">перейти</a></td>
 </tr>
 <tr class="distributor-row">
 <td>50754</td>
@@ -10409,7 +10409,7 @@ td.bf:not(:empty)::after{content:" \1F5A4";font-weight:900}
 <td class="imgcell"><img alt="" loading="lazy" src="https://shop.geizer.com/upload/iblock/185/IMG_5621.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"/></td>
 <td><a class="urla" href="https://shop.geizer.com/catalog/korpusa_1/korpus_filtra_geyzer_premer_10bb_1/" rel="noopener" target="_blank">перейти</a></td>
 </tr>
-<tr class="distributor-row">
+<tr class="new-item">
 <td>50790</td>
 <td>Корпус магистральный фильтра Гейзер С23 двойной 10BB 1” ВР, лат., мет. скоба</td>
 <td></td>
@@ -10417,10 +10417,10 @@ td.bf:not(:empty)::after{content:" \1F5A4";font-weight:900}
 <td></td>
 <td class="price">6840</td>
 <td></td>
-<td class="imgcell"></td>
-<td></td>
+<td class="imgcell"><img alt="" loading="lazy" src="https://shop.geizer.com/upload/resize_cache/iblock/fb4/q4h8y5ri2v0m4qg56y2qci6fqym571xm/650_650_140cd750bba9870f18aada2478b24840a/50790-Korpus_dvoyka-10VV-02.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;" /></td>
+							<td><a class="urla" href="https://shop.geizer.com/catalog/korpusa_1/korpus_magistralnyy_s23_dvoynoy_10bb_1/" rel="noopener" target="_blank">перейти</a></td>
 </tr>
-<tr class="distributor-row">
+<tr class="new-item">
 <td>50791</td>
 <td>Корпус магистральный фильтра Гейзер С23 тройной 10BB 1” ВР, лат., мет. скоба</td>
 <td></td>
@@ -10428,8 +10428,8 @@ td.bf:not(:empty)::after{content:" \1F5A4";font-weight:900}
 <td></td>
 <td class="price">9900</td>
 <td></td>
-<td class="imgcell"></td>
-<td></td>
+<td class="imgcell"><img alt="" loading="lazy" src="https://shop.geizer.com/upload/iblock/710/xt0ia73eijusd16otaxg3llhm0b7c2g2/50791-Korpus_troyka-10VV-02.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;" /></td>
+							<td><a class="urla" href="https://shop.geizer.com/catalog/korpusa_1/korpus_magistralnyy_s23_troynoy_10bb_1/" rel="noopener" target="_blank">перейти</a></td>
 </tr>
 <tr class="distributor-row">
 <td>50755</td>
@@ -10442,7 +10442,7 @@ td.bf:not(:empty)::after{content:" \1F5A4";font-weight:900}
 <td class="imgcell"><img alt="" loading="lazy" src="https://shop.geizer.com/upload/iblock/e3c/IMG_5544.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"/></td>
 <td><a class="urla" href="https://shop.geizer.com/catalog/korpusa_1/korpus_filtra_geyzer_premer_20bb_1/" rel="noopener" target="_blank">перейти</a></td>
 </tr>
-<tr class="distributor-row">
+<tr class="new-item">
 <td>50792</td>
 <td>Корпус магистральный фильтра Гейзер С23 двойной 20BB 1” ВР, лат., мет. скоба</td>
 <td></td>
@@ -10450,10 +10450,10 @@ td.bf:not(:empty)::after{content:" \1F5A4";font-weight:900}
 <td></td>
 <td class="price">7990</td>
 <td></td>
-<td class="imgcell"></td>
-<td></td>
+											<td class="imgcell"><img alt="" loading="lazy" src="https://shop.geizer.com/upload/iblock/88e/c5h63b2cif4od870974kug60rwuldse3/50792-Korpus_dvoyka-20VV-01.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;" /></td>
+							<td><a class="urla" href="https://shop.geizer.com/catalog/korpusa_1/korpus_magistralnyy_s23_dvoynoy_20bb_1" rel="noopener" target="_blank">перейти</a></td>
 </tr>
-<tr class="distributor-row">
+<tr class="new-item">
 <td>50793</td>
 <td>Корпус магистральный фильтра Гейзер С23 тройной 20BB 1” ВР, лат., мет. скоба</td>
 <td></td>
@@ -10461,8 +10461,8 @@ td.bf:not(:empty)::after{content:" \1F5A4";font-weight:900}
 <td></td>
 <td class="price">11900</td>
 <td></td>
-<td class="imgcell"></td>
-<td></td>
+<td class="imgcell"><img alt="" loading="lazy" src="https://shop.geizer.com/upload/resize_cache/iblock/a0b/4p3ier9i4sc8qaraefurg5o8zob9qw3h/650_650_140cd750bba9870f18aada2478b24840a/50793-Korpus_troyka-20VV-08.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;" /></td>
+							<td><a class="urla" href="https://shop.geizer.com/catalog/korpusa_1/korpus_magistralnyy_s23_troynoy_20bb_1/" rel="noopener" target="_blank">перейти</a></td>
 </tr>
 <tr class="distributor-row">
 <td>50512</td>
