--- a/index.html
+++ b/index.html
@@ -6911,6 +6911,58 @@ td.bf:not(:empty)::after{content:" \1F5A4";font-weight:900}
 </td>
 <td><a class="urla" href="https://shop.geizer.com/catalog/krany/kran_dlya_chistoy_vody_flowmaster_colour_zolotoy/" rel="noopener" target="_blank">перейти</a></td>
 </tr>
+<tr class="new-item">
+<td>25819</td>
+<td>Кран Элит хром</td>
+<td>кран для трехступенчатых фильтров и RO</td>
+<td>1</td>
+<td></td>
+<td class="price">1590</td>
+<td></td>
+<td class="imgcell">
+<img alt="" loading="lazy" src="https://shop.geizer.com/upload/iblock/31f/ojhkcwxxv9of9i8v8lpoxfebi9fe2dzs/25819_Kran_Serebryanyy-07.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"/>
+</td>
+<td><a class="urla" href="https://shop.geizer.com/catalog/krany/kran_dlya_chistoy_vody_geyzer_elit_khrom/" rel="noopener" target="_blank">перейти</a></td>
+</tr>
+<tr class="new-item">
+<td>25820</td>
+<td>Кран Элит черный</td>
+<td>цветной кран для трехступенчатых фильтров и RO</td>
+<td>1</td>
+<td></td>
+<td class="price">2390</td>
+<td></td>
+<td class="imgcell">
+<img alt="" loading="lazy" src="https://shop.geizer.com/upload/iblock/dbc/jd774vh90r0qrmhqfwg0un41fwu9gj3u/25820_Kran_CHernyy-04.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"/>
+</td>
+<td><a class="urla" href="https://shop.geizer.com/catalog/krany/kran_dlya_chistoy_vody_geyzer_elit_chernyy/" rel="noopener" target="_blank">перейти</a></td>
+</tr>
+<tr class="new-item">
+<td>25821</td>
+<td>Кран Элит графит</td>
+<td>цветной кран для трехступенчатых фильтров и RO</td>
+<td>1</td>
+<td></td>
+<td class="price">2390</td>
+<td></td>
+<td class="imgcell">
+<img alt="" loading="lazy" src="https://shop.geizer.com/upload/resize_cache/iblock/fc9/sqdfhqxnjvlrpmhl35s9g6c2devk77qr/650_650_140cd750bba9870f18aada2478b24840a/25821_Kran_Seryy_04.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"/>
+</td>
+<td><a class="urla" href="https://shop.geizer.com/catalog/krany/kran_dlya_chistoy_vody_geyzer_elit_grafit/" rel="noopener" target="_blank">перейти</a></td>
+</tr>
+<tr class="new-item">
+<td>25822</td>
+<td>Кран Элит золото</td>
+<td>цветной кран для трехступенчатых фильтров и RO</td>
+<td>1</td>
+<td></td>
+<td class="price">2390</td>
+<td></td>
+<td class="imgcell">
+<img alt="" loading="lazy" src="https://shop.geizer.com/upload/resize_cache/iblock/00d/323f9haiapd4fy5vzb5562vvsypzcivz/650_650_140cd750bba9870f18aada2478b24840a/25822_Kran_Zolotoy-04.jpg" style="max-width: 90px; max-height: 90px; border-radius: 6px; cursor: zoom-in;"/>
+</td>
+<td><a class="urla" href="https://shop.geizer.com/catalog/krany/kran_dlya_chistoy_vody_geyzer_elit_zoloto/" rel="noopener" target="_blank">перейти</a></td>
+</tr>
 <tr>
 <td>25070</td>
 <td>Кран для чистой воды исп.1</td>
