Change greeting to 'С наступающим 8 марта!'
Updated the greeting message for International Women's Day.

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
   <main class="wrap">
     <section class="card" role="status" aria-live="polite">
-      <h1>С наступающим новым годом</h1>
+      <h1>С наступающим 8 марта!</h1>
       <p><span class="accent">Прайс в работе, цены обновляются</span></p>
 
       <div class="footer">
@@ -226,3 +226,4 @@
   </script>
 </body>
 </html>
+
