Revamp index.html with new design and animations

--- a/index.html
+++ b/index.html
@@ -1,229 +1,166 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Прайс в работе</title>
-  <style>
-    :root{
-      --bg1:#0b1b3a;
-      --bg2:#0a3d2f;
-      --card: rgba(255,255,255,.10);
-      --card2: rgba(255,255,255,.06);
-      --text:#ffffff;
-      --muted: rgba(255,255,255,.82);
-      --accent:#ffd36a;
-      --shadow: 0 20px 60px rgba(0,0,0,.35);
-    }
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title> Прайс в работе 💐</title>
 
-    *{ box-sizing:border-box; }
-    html,body{ height:100%; }
-    body{
-      margin:0;
-      font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial, sans-serif;
-      color:var(--text);
-      overflow:hidden;
+<style>
+:root{
+  --bg1:#fff1f6;
+  --bg2:#ffe4ef;
+  --accent:#e11d74;
+  --text:#5b2a3a;
+}
 
-      /* Новогодний фон */
-      background:
-        radial-gradient(1200px 600px at 20% 10%, rgba(255,211,106,.20), transparent 55%),
-        radial-gradient(900px 500px at 80% 15%, rgba(120,240,255,.18), transparent 52%),
-        radial-gradient(1100px 700px at 50% 90%, rgba(160,255,200,.10), transparent 60%),
-        linear-gradient(135deg, var(--bg1), var(--bg2));
-    }
+*{margin:0;padding:0;box-sizing:border-box;}
 
-    /* Лёгкая “гирлянда” сверху */
-    .garland{
-      position:fixed;
-      top:0;
-      left:0;
-      right:0;
-      height:64px;
-      pointer-events:none;
-      background:
-        radial-gradient(circle at 8% 55%,  rgba(255,210,90,.95) 0 6px, transparent 7px),
-        radial-gradient(circle at 16% 50%, rgba(255,120,160,.92) 0 6px, transparent 7px),
-        radial-gradient(circle at 24% 56%, rgba(120,220,255,.92) 0 6px, transparent 7px),
-        radial-gradient(circle at 32% 50%, rgba(140,255,190,.92) 0 6px, transparent 7px),
-        radial-gradient(circle at 40% 55%, rgba(255,210,90,.95) 0 6px, transparent 7px),
-        radial-gradient(circle at 48% 50%, rgba(255,120,160,.92) 0 6px, transparent 7px),
-        radial-gradient(circle at 56% 56%, rgba(120,220,255,.92) 0 6px, transparent 7px),
-        radial-gradient(circle at 64% 50%, rgba(140,255,190,.92) 0 6px, transparent 7px),
-        radial-gradient(circle at 72% 55%, rgba(255,210,90,.95) 0 6px, transparent 7px),
-        radial-gradient(circle at 80% 50%, rgba(255,120,160,.92) 0 6px, transparent 7px),
-        radial-gradient(circle at 88% 56%, rgba(120,220,255,.92) 0 6px, transparent 7px),
-        radial-gradient(circle at 96% 50%, rgba(140,255,190,.92) 0 6px, transparent 7px);
-      opacity:.9;
-      filter: drop-shadow(0 6px 10px rgba(0,0,0,.35));
-    }
-    .garland::before{
-      content:"";
-      position:absolute;
-      left:-5%;
-      right:-5%;
-      top:18px;
-      height:34px;
-      border-top: 3px solid rgba(255,255,255,.30);
-      border-radius: 0 0 80% 80%;
-      transform: translateY(-10px);
-      opacity:.55;
-    }
+body{
+  min-height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  background: radial-gradient(1200px 800px at 50% -10%, var(--bg2), var(--bg1));
+  font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+  overflow:hidden;
+  position:relative;
+}
 
-    /* Центрированный блок */
-    .wrap{
-      height:100%;
-      display:grid;
-      place-items:center;
-      padding: 24px;
-      position:relative;
-      z-index: 2;
-    }
+.card{
+  position:relative;
+  z-index:2;
+  text-align:center;
+  padding:40px 50px;
+  background:white;
+  border-radius:20px;
+  box-shadow:0 25px 60px rgba(0,0,0,.15);
+  animation:fadeIn 1.2s ease;
+}
 
-    .card{
-      width:min(760px, 100%);
-      background: linear-gradient(180deg, var(--card), var(--card2));
-      border: 1px solid rgba(255,255,255,.18);
-      border-radius: 22px;
-      box-shadow: var(--shadow);
-      backdrop-filter: blur(10px);
-      -webkit-backdrop-filter: blur(10px);
-      padding: 36px 28px;
-      text-align:center;
-    }
+h1{
+  font-size:40px;
+  color:var(--accent);
+  margin-bottom:15px;
+}
 
-    .badge{
-      display:inline-flex;
-      gap:10px;
-      align-items:center;
-      padding: 8px 14px;
-      border-radius: 999px;
-      background: rgba(0,0,0,.18);
-      border: 1px solid rgba(255,255,255,.18);
-      font-size: 14px;
-      color: var(--muted);
-      margin-bottom: 16px;
-    }
+p{
+  font-size:18px;
+  color:var(--text);
+}
 
-    h1{
-      margin: 10px 0 10px;
-      font-size: clamp(28px, 4vw, 44px);
-      line-height: 1.08;
-      letter-spacing: .2px;
-      text-shadow: 0 10px 30px rgba(0,0,0,.25);
-    }
+@keyframes fadeIn{
+  from{opacity:0; transform:translateY(20px);}
+  to{opacity:1; transform:translateY(0);}
+}
 
-    p{
-      margin: 0;
-      font-size: clamp(16px, 2.2vw, 20px);
-      line-height: 1.45;
-      color: var(--muted);
-    }
+/* ====== ЦВЕТЫ ====== */
 
-    .accent{
-      color: var(--accent);
-      font-weight: 650;
-    }
+.petals{
+  position:fixed;
+  inset:0;
+  pointer-events:none;
+  z-index:1;
+  overflow:hidden;
+}
 
-    .footer{
-      margin-top: 18px;
-      font-size: 13px;
-      color: rgba(255,255,255,.68);
-    }
+.flower{
+  position:absolute;
+  top:-10vh;
+  width:18px;
+  height:18px;
+  opacity:.95;
+  will-change:transform;
+  animation-name: fall, drift, spin;
+  animation-timing-function: linear, ease-in-out, linear;
+  animation-iteration-count: infinite, infinite, infinite;
+}
 
-    /* СНЕГ */
-    .snow{
-      position:fixed;
-      inset:0;
-      pointer-events:none;
-      z-index:1;
-      overflow:hidden;
-    }
-    .flake{
-      position:absolute;
-      top:-10vh;
-      width: 8px;
-      height: 8px;
-      border-radius: 50%;
-      background: rgba(255,255,255,.85);
-      filter: drop-shadow(0 6px 10px rgba(0,0,0,.25));
-      opacity:.9;
-      animation-name: fall, sway;
-      animation-timing-function: linear, ease-in-out;
-      animation-iteration-count: infinite, infinite;
-    }
-    @keyframes fall{
-      to { transform: translateY(120vh); }
-    }
-    @keyframes sway{
-      0%,100% { margin-left: 0px; }
-      50% { margin-left: 22px; }
-    }
+/* рисуем цветок */
+.flower::before{
+  content:"";
+  position:absolute;
+  inset:0;
+  border-radius:50%;
+  background:
+    radial-gradient(circle at 50% 20%, var(--p) 0 42%, transparent 43%),
+    radial-gradient(circle at 80% 40%, var(--p) 0 42%, transparent 43%),
+    radial-gradient(circle at 68% 78%, var(--p) 0 42%, transparent 43%),
+    radial-gradient(circle at 32% 78%, var(--p) 0 42%, transparent 43%),
+    radial-gradient(circle at 20% 40%, var(--p) 0 42%, transparent 43%),
+    radial-gradient(circle at 50% 50%, var(--c) 0 18%, transparent 19%);
+  transform:rotate(var(--r));
+}
 
-    /* Мелкие звездочки на фоне */
-    .stars{
-      position:fixed;
-      inset:0;
-      pointer-events:none;
-      z-index:0;
-      background-image:
-        radial-gradient(circle, rgba(255,255,255,.35) 1px, transparent 2px),
-        radial-gradient(circle, rgba(255,255,255,.25) 1px, transparent 2px),
-        radial-gradient(circle, rgba(255,255,255,.18) 1px, transparent 2px);
-      background-size: 160px 160px, 220px 220px, 300px 300px;
-      background-position: 0 0, 40px 60px, 120px 20px;
-      opacity:.45;
-    }
+@keyframes fall{
+  to { transform: translateY(120vh); }
+}
 
-    @media (prefers-reduced-motion: reduce){
-      .flake{ animation: none; }
-    }
-  </style>
+@keyframes drift{
+  0%,100% { margin-left: 0px; }
+  50% { margin-left: 40px; }
+}
+
+@keyframes spin{
+  to { rotate: 360deg; }
+}
+
+</style>
 </head>
 <body>
-  <div class="stars" aria-hidden="true"></div>
-  <div class="garland" aria-hidden="true"></div>
-  <div class="snow" id="snow" aria-hidden="true"></div>
 
-  <main class="wrap">
-    <section class="card" role="status" aria-live="polite">
-      <h1>С наступающим 8 марта!</h1>
-      <p><span class="accent">Прайс в работе, цены обновляются</span></p>
+<div class="petals" id="petals"></div>
 
-      <div class="footer">
-        Страница обновится после завершения работ.
-      </div>
-    </section>
-  </main>
+<div class="card">
+  <h1>С наступающим 8 Марта 💐</h1>
+  <p>Прайс в работе, цены обновляются</p>
+</div>
 
-  <script>
-    // Генерация "снега" без библиотек
-    (function () {
-      const snow = document.getElementById('snow');
-      const count = 42; // количество снежинок
+<script>
+const container = document.getElementById("petals");
 
-      for (let i = 0; i < count; i++) {
-        const flake = document.createElement('div');
-        flake.className = 'flake';
+const petalColors = [
+  "#ff6fa5",
+  "#ff85b3",
+  "#ff9cc0",
+  "#f472b6",
+  "#fb7185"
+];
 
-        // случайные параметры
-        const size = 3 + Math.random() * 7;                 // 3..10px
-        const left = Math.random() * 100;                   // %
-        const fallDuration = 8 + Math.random() * 10;        // 8..18s
-        const swayDuration = 2.5 + Math.random() * 3.5;     // 2.5..6s
-        const delay = -Math.random() * fallDuration;        // чтобы снег "уже шёл"
+const centerColors = [
+  "#ffd166",
+  "#ffe066",
+  "#ffc300"
+];
 
-        flake.style.width = size + 'px';
-        flake.style.height = size + 'px';
-        flake.style.left = left + '%';
-        flake.style.opacity = (0.35 + Math.random() * 0.65).toFixed(2);
+const COUNT = 45;
 
-        flake.style.animationDuration = fallDuration + 's, ' + swayDuration + 's';
-        flake.style.animationDelay = delay + 's, ' + (delay * 0.6) + 's';
+for(let i = 0; i < COUNT; i++){
+  const flower = document.createElement("div");
+  flower.className = "flower";
 
-        snow.appendChild(flake);
-      }
-    })();
-  </script>
+  const size = Math.random() * 14 + 14;
+  const left = Math.random() * 100;
+  const duration = Math.random() * 10 + 10;
+  const delay = Math.random() * 10;
+  const driftDuration = Math.random() * 6 + 6;
+  const spinDuration = Math.random() * 8 + 6;
+
+  const petal = petalColors[Math.floor(Math.random() * petalColors.length)];
+  const center = centerColors[Math.floor(Math.random() * centerColors.length)];
+
+  flower.style.left = left + "vw";
+  flower.style.width = size + "px";
+  flower.style.height = size + "px";
+  flower.style.setProperty("--p", petal);
+  flower.style.setProperty("--c", center);
+  flower.style.setProperty("--r", Math.random()*360 + "deg");
+
+  flower.style.animationDuration = `${duration}s, ${driftDuration}s, ${spinDuration}s`;
+  flower.style.animationDelay = `${delay}s, ${delay}s, 0s`;
+
+  container.appendChild(flower);
+}
+</script>
+
 </body>
 </html>
-
